--- a/src/components/todos/TodoItem.module.scss
+++ b/src/components/todos/TodoItem.module.scss
@@ -1,7 +1,7 @@
-.checked {
-}
-.unchecked {
-}
+.checked {}
+
+.unchecked {}
+
 .todoItem {}
 
 .checkbox {
@@ -9,20 +9,42 @@
   grid-column: 1 / span 2;
   grid-template-columns: subgrid;
   justify-items: start;
+  align-content: center;
 
 
   & input[type="checkbox"] {
     display: none;
   }
+
+  & button {
+    margin: 0;
+    padding: 0;
+    background: none;
+    border: none;
+    color: var(--border-1);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.25rem;
+  }
+
+  &.checked {
+    text-decoration: line-through;
+  }
 }
 
 .checkboxControl {
   grid-column: 1;
-  height: 20px;
-  width: 20px;
   border-radius: 6px;
-  border: 1px solid var(--border-1);
-  background-color: var(--surface-1);
+  border: none;
+  background: none;
+
+  & svg {
+    height: 20px;
+    width: 20px;
+    color: var(--text-1);
+  }
 }
 
 .checkboxInput {
@@ -48,4 +70,23 @@
   grid-column: 2;
   display: flex;
   align-items: start;
+}
+
+.form {
+  display: grid;
+  grid-column: 1 / span 2;
+  grid-template-columns: subgrid;
+}
+
+.nameInput {
+  background: none;
+  border: none;
+  color: var(--text-1);
+  font-size: 1.25rem;
+}
+
+.checkboxButton {
+  background: none;
+  border: none;
+  color: var(--border-1);
 }
